[gd_scene load_steps=5 format=3 uid="uid://b11twcy7pyup1"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_1kx0j"]

[sub_resource type="Environment" id="Environment_6bwa6"]
background_mode = 3
glow_enabled = true
glow_hdr_threshold = 1.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8slr"]
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.266667, 0.278431, 0.352941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qyqne"]
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.266667, 0.278431, 0.352941, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_1kx0j")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6bwa6")

[node name="Background" type="ColorRect" parent="."]
color = Color(0.156863, 0.164706, 0.211765, 1)

[node name="BoidContainer" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Options" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Options"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AlignmentLabel" type="Label" parent="CanvasLayer/Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Alignment"
horizontal_alignment = 1

[node name="CohesionLabel" type="Label" parent="CanvasLayer/Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cohesion"
horizontal_alignment = 1

[node name="SeparationLabel" type="Label" parent="CanvasLayer/Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Separation"
horizontal_alignment = 1

[node name="SpeedLabel" type="Label" parent="CanvasLayer/Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speed"
horizontal_alignment = 1

[node name="CountLabel" type="Label" parent="CanvasLayer/Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Count"
horizontal_alignment = 1

[node name="SliderContainer" type="HBoxContainer" parent="CanvasLayer/Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="AlignmentSlider" type="HSlider" parent="CanvasLayer/Options/VBoxContainer/SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_d8slr")
max_value = 1.0
step = 0.01

[node name="CohesionSlider" type="HSlider" parent="CanvasLayer/Options/VBoxContainer/SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_d8slr")
max_value = 1.0
step = 0.01

[node name="SeparationSlider" type="HSlider" parent="CanvasLayer/Options/VBoxContainer/SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_d8slr")
max_value = 1.0
step = 0.01

[node name="SpeedSlider" type="HSlider" parent="CanvasLayer/Options/VBoxContainer/SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_d8slr")
max_value = 5.0
step = 0.5

[node name="CountSlider" type="HSlider" parent="CanvasLayer/Options/VBoxContainer/SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_qyqne")
max_value = 200.0
step = 10.0

[connection signal="value_changed" from="CanvasLayer/Options/VBoxContainer/SliderContainer/AlignmentSlider" to="." method="_on_alignment_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Options/VBoxContainer/SliderContainer/CohesionSlider" to="." method="_on_cohesion_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Options/VBoxContainer/SliderContainer/SeparationSlider" to="." method="_on_separation_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Options/VBoxContainer/SliderContainer/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Options/VBoxContainer/SliderContainer/CountSlider" to="." method="_on_count_slider_value_changed"]
